@startuml
title control - App y Controladores

skinparam classAttributeIconSize 0
skinparam shadowing false

package "control" #FFFFFF {

  class EscapeMazmorraApp {
    - StackPane raiz
    - Pane contenidoActual
    - Stage stage
    - ControladorFlujo flujo
    ..
    + void start(Stage stage)
    + main(String[] args)
  }

  class ControladorFlujo {
    - Stage stage
    - Partida partida
    - String nombreJugador
    ..
    + void setPartida(Partida p)
    + void setNombreJugador(String n)
    + void mostrarIntroduccion()
    + void mostrarTransicion(String id)
    + void mostrarJuego()
    + void mostrarFinal(boolean win)
  }

  class JuegoController {
    - PantallaJuego vista
    - Partida partida
    - HechizoPendiente hechizoPendiente
    ..
    + void handleKeyPressed(KeyEvent e)
    + void handleKeyReleased(KeyEvent e)
    + void handleCellClick(int f, int c, boolean p)
  }

  EscapeMazmorraApp *-- ControladorFlujo
  ControladorFlujo *-- PantallaJuego
  ControladorFlujo *-- PantallaIntroduccion
  ControladorFlujo *-- PantallaTransicion
  ControladorFlujo *-- PantallaFinal
  ControladorFlujo --> Partida
  JuegoController --> Partida
  JuegoController --> PantallaJuego
}
@enduml
